# pbs-plus

./: .gitignore  .goreleaser.yaml  Dockerfile  Dockerfile.operator  LICENSE  README.md  go.mod  go.sum  pbsauth-cache-report.md  phase1-server-consolidation.md  phase2-renames.md  restructure-mapping.json  sqlc.yaml  test.Dockerfile  test_e2e.sh
.github/workflows/: cleanup-drafts.yml  cleanup-rcs.yml  development.yml  e2e-test-backup.yml  e2e-tests.yml  go-tests.yml  pr.yml  rc-cleanup.yml  release-msi.yml  release-pxar-mount.yml  release-pxar-socket.yml  release.yml  tests.yml
cmd/agent/: main_unix.go  main_windows.go
cmd/bkf2pxar/: main.go
cmd/changerctl/: main.go
cmd/mtfprobe/: main.go
cmd/operator/: main.go
cmd/pbs_plus/: helpers.go  main.go
cmd/pxar-mount/: commit.go  main.go  main_test.go  mutation_test.go  passthrough.go  race_test.go  transactions.go  transactions_test.go
cmd/signer/: main.go
cmd/unix_agent/: main.go  update_fetcher.go
cmd/unix_updater/: main.go
cmd/windows_agent/: main.go  service.go  update_fetcher.go
cmd/windows_updater/: helpers.go  main.go  service.go  update-agent.ps1  updater.go
deploy/kubernetes/: operator.yaml
docs/: architecture.md  development.md  installation.md  kubernetes-operator.md  pxar-mount.md  usage.md
extras/proxmox-backup-pxar-mount/: .goreleaser.yaml  Cargo.toml
extras/proxmox-backup-pxar-mount/src/: fuse_session.rs  main.rs
extras/pxar-direct-mount/: .gitignore  .goreleaser.yaml  Cargo.toml
extras/pxar-socket-api/: .goreleaser.yaml  Cargo.toml
extras/pxar-test-util/: Cargo.toml
extras/pxar-test-util/src/: main.rs
internal/agent/: bootstrap.go  drives_unix.go  drives_windows.go  hostname.go  http.go  restoreManager.go  restore_manager.go  restore_manager_unix.go  restore_manager_windows.go  statusManager_windows.go  status_manager.go  tls_config.go  uri.go  wakelock_unix.go  wakelock_windows.go
internal/application/: agenthost_service.go  backup_service.go  exclusion_service.go  repository.go  restore_service.go  script_service.go  service_test.go  services.go  target_service.go
internal/arpc/: agents_manager.go  arpc.go  arpc_quic.go  arpc_test.go  binary_stream.go  call.go  connection_manager.go  errors.go  frames.go  handle_bench_test.go  headers.go  helpers.go  limits.go  listener.go  nbio_engine.go  node.go  peer.go  pipe.go  quic_transport.go  router.go  session.go  stream.go  types.go  utils.go  wrappers.go  yamux_logger.go
internal/auth/: auth_test.go
internal/backend/: bootstrap.go  encode_path.go  filetree.go  memlimit.go  resilience.go  resilience_test.go  shared.go  systemd_mount.go
internal/bkf2pxar/: converter.go  feeder.go  progress.go  sgtape.go  tape.go  tape_test.go
internal/calendar/: calendar.go  calendar_test.go
internal/calendarevent/: calendar.go  calendarevent_test.go
internal/changer/: changer.go  decode.go  decode_test.go  errors.go  sgio.go  smc.go
internal/conf/: buffer.go  config.go  config_test.go  constants.go  constants_agent.go  default_exclusions.go  validate.go
internal/crypto/: aes.go  crypto_test.go  errors.go  hash.go  random.go  seal.go  tls.go  tls_fips_verify.go  token.go
internal/domain/: repository.go
internal/host/: host.go
internal/log/: bench_test.go  job_unix.go  job_windows.go  log.go  log_task.go  log_unix.go  log_windows.go
internal/memlimit/: memlimit.go
internal/memlocal/: server.go
(+2308 files in other folders)
